test/compflags/ferguson/default-type-prints.chpl
proc error(a: int,
           b: uint,
           c: bool,
           d: real,
           e: imag,
           f: complex) {
  var x: int;
  x = 20.0;
}

error(1, 1:uint, true, 1.0, 1.0i, 1.0+2.0i);
